Update Text Classification with Logistic Regression.ipynb

--- a/Text Classification with Logistic Regression.ipynb
+++ b/Text Classification with Logistic Regression.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "\n",
     "\n",
-    "The goal of this assignment is to develop and test two text classification systems: \n",
+    "The goal of this project is to develop and test two text classification systems: \n",
     "\n",
     "- **Task 1:** sentiment analysis, in particular to predict the sentiment of movie review, i.e. positive or negative (binary classification).\n",
     "- **Task 2:** topic classification, to predict whether a news article is about International issues, Sports or Business (multiclass classification).\n",
